<resources>
    <string name="app_name">CalendarAppExample</string>
    <string name="back" translatable="false"><![CDATA[<-]]></string>
    <string name="forward" translatable="false"><![CDATA[->]]></string>
    <string name="title_activity_test" translatable="false">testActivity</string>
    <string name="title_activity_full_sceen_event" translatable="false">FullSceenEventActivity</string>
    <string name="subject">Subject</string>
    <string name="group">Group(s)</string>
    <string name="teacher">Teacher(s)</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="pinpoint">PinPoint</string>
    <string name="select_timetable">Select a Timetable</string>
    <string name="NoMoreEvents">No more events for this day</string>
    <string name="notes">Notes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="schedule">Schedules</string>
    <string name="parameters">Parameters</string>
    <string name="others">Others</string>
    <string name="cm">Lectures</string>
    <string name="selection">Selection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>