<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationView">

    <item android:title="@string/selection">
        <menu>
            <group>
                <item
                    android:id="@+id/CM"
                    android:title="@string/cm"
                    app:actionViewClass="android.widget.Switch"/>
                <item
                    android:id="@+id/TD"
                    android:title="TD"
                    app:actionViewClass="android.widget.Switch"/>
                <item
                    android:id="@+id/TP"
                    android:title="TP"
                    app:actionViewClass="android.widget.Switch"/>
                <item
                    android:id="@+id/other"
                    android:title="@string/others"
                    app:actionViewClass="android.widget.Switch"/>

            </group>
        </menu>
    </item>


    <item android:checkableBehavior="single"
        android:id="@+id/parameters"
        android:title="@string/parameters"/>



</menu>