<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="25dp"
        android:id="@+id/event"
        android:color="@color/lightGray">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:id="@+id/eventCategory"
                android:textSize="40sp"
                android:textColor="@color/blue"
                android:text="TD"/>
            
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:onClick="closeActivityAction"
                android:src="@drawable/close_24px"/>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:id="@+id/eventDate"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="Jeudi 26 Octobre"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:id="@+id/eventStartTime"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="9h45"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:text=" | "/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_room_black_48"
                android:contentDescription="@string/pinpoint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/eventRoom"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:text="Room"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:id="@+id/eventEndTime"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="10h30"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/subject"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:id="@+id/eventModule"
            android:textSize="18sp"
            android:textColor="@color/darkGrey"
            android:text="Grammaire et anglais professionel 1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/group"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:id="@+id/eventGroup"
            android:textSize="18sp"
            android:textColor="@color/darkGrey"
            android:text="INFO3 PROMOTION"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/teacher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:id="@+id/eventProf"
            android:textSize="18sp"
            android:textColor="@color/darkGrey"
            android:text="JP Guédon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/eventNotesTitle"
            android:text="@string/notes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:id="@+id/eventNotes"
            android:textSize="18sp"
            android:textColor="@color/darkGrey"
            android:text="Vacances"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:onClick="previousEventAction"
                android:layout_margin="10dp"
                android:textSize="30sp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forward"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="nextEventAction"
                android:textAlignment="textEnd"
                android:layout_margin="10dp"
                android:textSize="30sp"/>



        </LinearLayout>

    </LinearLayout>


</LinearLayout>